--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no" />
-		<title>Moto X3M - Play 1v1.lol at motox3monline.github.io</title>
+		<title>Moto X3M - Play Moto X3M at MotoX3mOnline.github.io</title>
 			<link rel="icon" href="/images/favicon.png" sizes="32x32">
 		<meta name="description" content="Play Moto X3M Games for Free">
 		<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" />
@@ -96,7 +96,7 @@
 		</div>
 		<div class="game-info">
 			<div class="header-left">
-				<h1 class="single-title">1v1.LOL Game</h1>
+				<h1 class="single-title">Moto X3M Game</h1>
 			</div>
 			<div class="header-right">
 				<div class="b-action">						
