--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
   gtag('config', 'G-THVR037QSG');
 </script>
 
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7483089792954791"
+     crossorigin="anonymous"></script>
+     
 </head>
 
 	<body id="page-top">
